fix overlap issues with grid
this fixes the longstanding issue where an element would dominate the viewport

--- a/src/components/Panels.scss
+++ b/src/components/Panels.scss
@@ -7,6 +7,7 @@
   overflow-y: hidden;
   display: grid;
   grid-template-columns: 1fr 1fr;
+  grid-auto-rows: minmax(0, 1fr);
   & > *,
   & > div.PWA > *,
   & .Tabs > .Tab {
